--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "vite": "^5.4.8"
-  }
+  },
+  "description": ""
 }
